--- a/news.html
+++ b/news.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="ブランドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
+    <meta name="viewport" content="whith=device-width,initial-scale=1">
     <title>WCB Cafe - NEWS</title>
 
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
@@ -65,6 +66,9 @@
             　　美味しいブレンドコーヒーとヘルシーなオーガニックフードで体の内側から癒されてください。
             </p>
         </aside>
+        <div class="ad">
+            <img src="images/banner.jpg" alt="新メニュー登場">
+        </div>
     </div>
 
     <footer>
